# subaru-carlink-adapter

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  log.txt  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.github/workflows/: build.yml
logs/: монитор_и_cd_changer_потом.txt  монитор_и_cd_changer_сразу.txt  монитор_и_cd_changer_сразу_2.txt  только_cd_changer_2.txt
main/: AudioProcessor.cpp  AudioProcessor.hpp  CAN.cpp  CAN.hpp  CMakeLists.txt  DisplayProcessor.cpp  DisplayProcessor.hpp  MessageParser.cpp  MessageParser.hpp  MessageQueue.cpp  MessageQueue.hpp  USB.cpp  USB.hpp  idf_component.yml  main.cpp
main/device/: AudioProcessor.cpp  AudioProcessor.hpp
main/ie_bus/: Controller.cpp  Controller.hpp  Driver.cpp  Driver.hpp  Message.hpp  Queue.hpp
main/media/: MessageParser.cpp  MessageParser.hpp
main/media/device/: AudioProcessor.cpp  AudioProcessor.hpp  DisplayProcessor.cpp  DisplayProcessor.hpp
src/: CMakeLists.txt  avc.cpp  avc.hpp  avc_line.cpp  avc_line.hpp  configuration.cpp  configuration.hpp  main.cpp  protocol_analyzer.cpp  protocol_analyzer.hpp
src/protocol/: bit_decoder.cpp  bit_decoder.hpp  packet.hpp  packet_builder.cpp  packet_builder.hpp  signal_reader.cpp  signal_reader.hpp
